--- a/classes/core.US1.html
+++ b/classes/core.US1.html
@@ -3,16 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="x-ua-compatible" content="IE=edge"/>
-<title>Test results - Package core</title>
+<title>Test results - US1</title>
 <link href="../css/base-style.css" rel="stylesheet" type="text/css"/>
 <link href="../css/style.css" rel="stylesheet" type="text/css"/>
 <script src="../js/report.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="content">
-<h1>Package core</h1>
+<h1>US1</h1>
 <div class="breadcrumbs">
-<a href="../index.html">all</a> &gt; core</div>
+<a href="../index.html">all</a> &gt; 
+<a href="../packages/core.html">core</a> &gt; US1</div>
 <div id="summary">
 <table>
 <tr>
@@ -22,13 +23,13 @@
 <tr>
 <td>
 <div class="infoBox" id="tests">
-<div class="counter">3</div>
+<div class="counter">1</div>
 <p>tests</p>
 </div>
 </td>
 <td>
 <div class="infoBox" id="failures">
-<div class="counter">1</div>
+<div class="counter">0</div>
 <p>failures</p>
 </div>
 </td>
@@ -40,7 +41,7 @@
 </td>
 <td>
 <div class="infoBox" id="duration">
-<div class="counter">0.021s</div>
+<div class="counter">0.014s</div>
 <p>duration</p>
 </div>
 </td>
@@ -49,8 +50,8 @@
 </div>
 </td>
 <td>
-<div class="infoBox failures" id="successRate">
-<div class="percent">66%</div>
+<div class="infoBox success" id="successRate">
+<div class="percent">100%</div>
 <p>successful</p>
 </div>
 </td>
@@ -60,55 +61,39 @@
 <div id="tabs">
 <ul class="tabLinks">
 <li>
-<a href="#tab0">Failed tests</a>
+<a href="#tab0">Tests</a>
 </li>
 <li>
-<a href="#tab1">Classes</a>
+<a href="#tab1">Standard output</a>
 </li>
 </ul>
 <div id="tab0" class="tab">
-<h2>Failed tests</h2>
-<ul class="linkList">
-<li>
-<a href="../classes/core.US2.html">US2</a>.
-<a href="../classes/core.US2.html#testNonExistentPath()">testNonExistentPath()</a>
-</li>
-</ul>
-</div>
-<div id="tab1" class="tab">
-<h2>Classes</h2>
+<h2>Tests</h2>
 <table>
-<thread>
+<thead>
 <tr>
-<th>Class</th>
-<th>Tests</th>
-<th>Failures</th>
-<th>Ignored</th>
+<th>Test</th>
 <th>Duration</th>
-<th>Success rate</th>
+<th>Result</th>
 </tr>
-</thread>
+</thead>
 <tr>
-<td class="success">
-<a href="../classes/core.US1.html">US1</a>
-</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0.014s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="failures">
-<a href="../classes/core.US2.html">US2</a>
-</td>
-<td>2</td>
-<td>1</td>
-<td>0</td>
-<td>0.007s</td>
-<td class="failures">50%</td>
+<td class="success">CA0()</td>
+<td class="success">0.014s</td>
+<td class="success">passed</td>
 </tr>
 </table>
+</div>
+<div id="tab1" class="tab">
+<h2>Standard output</h2>
+<span class="code">
+<pre>Working Directory = /home/runner/work/core-module/core-module
+DefaultReportTracker.class
+DefaultReportTracker.java
+Hola jaja
+java.util.Random@30c93896
+</pre>
+</span>
 </div>
 </div>
 <div id="footer">
