--- a/classes/core.US3.html
+++ b/classes/core.US3.html
@@ -3,16 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="x-ua-compatible" content="IE=edge"/>
-<title>Test results - Package core</title>
+<title>Test results - US3</title>
 <link href="../css/base-style.css" rel="stylesheet" type="text/css"/>
 <link href="../css/style.css" rel="stylesheet" type="text/css"/>
 <script src="../js/report.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="content">
-<h1>Package core</h1>
+<h1>US3</h1>
 <div class="breadcrumbs">
-<a href="../index.html">all</a> &gt; core</div>
+<a href="../index.html">all</a> &gt; 
+<a href="../packages/core.html">core</a> &gt; US3</div>
 <div id="summary">
 <table>
 <tr>
@@ -22,7 +23,7 @@
 <tr>
 <td>
 <div class="infoBox" id="tests">
-<div class="counter">22</div>
+<div class="counter">1</div>
 <p>tests</p>
 </div>
 </td>
@@ -40,7 +41,7 @@
 </td>
 <td>
 <div class="infoBox" id="duration">
-<div class="counter">0.083s</div>
+<div class="counter">0.001s</div>
 <p>duration</p>
 </div>
 </td>
@@ -60,91 +61,23 @@
 <div id="tabs">
 <ul class="tabLinks">
 <li>
-<a href="#tab0">Classes</a>
+<a href="#tab0">Tests</a>
 </li>
 </ul>
 <div id="tab0" class="tab">
-<h2>Classes</h2>
+<h2>Tests</h2>
 <table>
-<thread>
+<thead>
 <tr>
-<th>Class</th>
-<th>Tests</th>
-<th>Failures</th>
-<th>Ignored</th>
+<th>Test</th>
 <th>Duration</th>
-<th>Success rate</th>
+<th>Result</th>
 </tr>
-</thread>
+</thead>
 <tr>
-<td class="success">
-<a href="../classes/core.US1.html">US1</a>
-</td>
-<td>3</td>
-<td>0</td>
-<td>0</td>
-<td>0.029s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US2.html">US2</a>
-</td>
-<td>7</td>
-<td>0</td>
-<td>0</td>
-<td>0.023s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US3.html">US3</a>
-</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0.001s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US4.html">US4</a>
-</td>
-<td>3</td>
-<td>0</td>
-<td>0</td>
-<td>0.012s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US5.html">US5</a>
-</td>
-<td>5</td>
-<td>0</td>
-<td>0</td>
-<td>0.008s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US6.html">US6</a>
-</td>
-<td>2</td>
-<td>0</td>
-<td>0</td>
-<td>0.009s</td>
-<td class="success">100%</td>
-</tr>
-<tr>
-<td class="success">
-<a href="../classes/core.US7.html">US7</a>
-</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0.001s</td>
-<td class="success">100%</td>
+<td class="success">CA1PassedBadge()</td>
+<td class="success">0.001s</td>
+<td class="success">passed</td>
 </tr>
 </table>
 </div>
